--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: generate pacman game
 
 on:
-  schedule: # Run automatically every 24 hours
-    - cron: "0 */24 * * *"
+  # schedule: # Run automatically every 24 hours
+  #   - cron: "0 */24 * * *"
   workflow_dispatch: # Allows manual triggering
   push: # Runs on every push to the main branch
     branches:
